[gd_scene load_steps=34 format=3 uid="uid://4w3jdc6d616y"]

[ext_resource type="Script" uid="uid://do2qx6nm8dnum" path="res://scripts/work_scene_script.gd" id="1_clgo3"]
[ext_resource type="Script" uid="uid://chb3wjdh8jfij" path="res://scripts/moneyCounterScript.gd" id="1_eoja1"]
[ext_resource type="Texture2D" uid="uid://ccp3bykpnc34l" path="res://sprites/SanityBarUnder.png" id="1_jqjy7"]
[ext_resource type="Texture2D" uid="uid://c7xhg66yxv0q7" path="res://sprites/sanityBar.png" id="2_i6sgx"]
[ext_resource type="Texture2D" uid="uid://q3kmyyh88l0c" path="res://sprites/work_scene/table and corkboard asset.png" id="2_jc4is"]
[ext_resource type="Texture2D" uid="uid://bc2erf2wu42dl" path="res://sprites/money 11 x 17 px.PNG" id="2_ytnmq"]
[ext_resource type="Script" uid="uid://blsgcxvh2pl53" path="res://scripts/sanityBar.gd" id="3_eoja1"]
[ext_resource type="Texture2D" uid="uid://duyiac8lvhitu" path="res://sprites/work_scene/mouse and keyboard asset.png" id="4_y3pug"]
[ext_resource type="Script" uid="uid://bf4ckjuh87st7" path="res://scripts/call_timer.gd" id="5_eoja1"]
[ext_resource type="PackedScene" uid="uid://bq6r3vur078ww" path="res://scenes/Telephone.tscn" id="5_io2gt"]
[ext_resource type="Texture2D" uid="uid://32fbke6ky7ip" path="res://sprites/work_scene/corkboard notes asset.png" id="5_ni28n"]
[ext_resource type="Script" uid="uid://cysj8q05h4did" path="res://scripts/target_bar_script.gd" id="7_7nxki"]
[ext_resource type="Texture2D" uid="uid://b1r6erwnhpmqa" path="res://sprites/work_scene/sanity bar/bottom.png" id="8_cphpt"]
[ext_resource type="PackedScene" uid="uid://d2bcts6ujb2hd" path="res://scenes/Screen.tscn" id="9_2pybm"]
[ext_resource type="Texture2D" uid="uid://bcej5pylfuo8" path="res://sprites/work_scene/sanity bar/top.png" id="9_rmouj"]
[ext_resource type="Texture2D" uid="uid://b1b2q1nhc2kyl" path="res://sprites/work_scene/sanity bar/mid.png" id="10_mff8n"]
[ext_resource type="Texture2D" uid="uid://bqhabj0j6kghk" path="res://icon.svg" id="12_8xdsi"]
[ext_resource type="Texture2D" uid="uid://d3nocq11xdemp" path="res://sprites/clock/9.png" id="15_go4cm"]
[ext_resource type="PackedScene" uid="uid://b4llg3rjxideq" path="res://scenes/pause_menu_in_game.tscn" id="15_y3pug"]
[ext_resource type="Texture2D" uid="uid://dowqb75pj6ats" path="res://sprites/clock/10.png" id="16_w2tv4"]
[ext_resource type="Texture2D" uid="uid://dp7siga4umx6q" path="res://sprites/clock/11.png" id="17_s0bdn"]
[ext_resource type="Texture2D" uid="uid://xaopfryphl4m" path="res://sprites/clock/12.png" id="18_omevc"]
[ext_resource type="Texture2D" uid="uid://bk5xsmp3tdc4k" path="res://sprites/clock/1.png" id="19_es821"]
[ext_resource type="Texture2D" uid="uid://tmfus7qco1yy" path="res://sprites/clock/2.png" id="20_tt0ds"]
[ext_resource type="Texture2D" uid="uid://bujc5nb8gy6m5" path="res://sprites/clock/3.png" id="21_hfjvd"]
[ext_resource type="Texture2D" uid="uid://dn0tdtvo856hw" path="res://sprites/clock/4.png" id="22_yjw18"]
[ext_resource type="Texture2D" uid="uid://cvgvqf11uegc4" path="res://sprites/clock/5.png" id="23_3gmet"]
[ext_resource type="Texture2D" uid="uid://ddm80yf5qtc53" path="res://sprites/clock/6.png" id="24_f30yx"]
[ext_resource type="Texture2D" uid="uid://bga1wnuoyufkp" path="res://sprites/clock/7.png" id="25_rq3n8"]
[ext_resource type="Texture2D" uid="uid://yri1g0l6vx8u" path="res://sprites/clock/8.png" id="26_j1ws0"]
[ext_resource type="Script" uid="uid://d03mm1vbye1" path="res://scripts/clock.gd" id="27_s0bdn"]
[ext_resource type="Script" uid="uid://bhxisiridlirf" path="res://scripts/work_timer.gd" id="31_omevc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_g1u5m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_go4cm")
}, {
"duration": 1.0,
"texture": ExtResource("16_w2tv4")
}, {
"duration": 1.0,
"texture": ExtResource("17_s0bdn")
}, {
"duration": 1.0,
"texture": ExtResource("18_omevc")
}, {
"duration": 1.0,
"texture": ExtResource("19_es821")
}, {
"duration": 1.0,
"texture": ExtResource("20_tt0ds")
}, {
"duration": 1.0,
"texture": ExtResource("21_hfjvd")
}, {
"duration": 1.0,
"texture": ExtResource("22_yjw18")
}, {
"duration": 1.0,
"texture": ExtResource("23_3gmet")
}, {
"duration": 1.0,
"texture": ExtResource("24_f30yx")
}, {
"duration": 1.0,
"texture": ExtResource("25_rq3n8")
}, {
"duration": 1.0,
"texture": ExtResource("26_j1ws0")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[node name="WorkScene" type="Node2D"]
script = ExtResource("1_clgo3")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="PcStuff" type="Node2D" parent="."]

[node name="tableandcork" type="Sprite2D" parent="PcStuff"]
position = Vector2(642, 475.00003)
scale = Vector2(0.865, 0.865)
texture = ExtResource("2_jc4is")

[node name="mousekeyboard" type="Sprite2D" parent="PcStuff"]
position = Vector2(468.5, 588)
scale = Vector2(0.29133338, 0.24)
texture = ExtResource("4_y3pug")

[node name="notes" type="Sprite2D" parent="PcStuff"]
position = Vector2(872.99994, 318)
scale = Vector2(0.195, 0.195)
texture = ExtResource("5_ni28n")

[node name="Screen" parent="PcStuff" instance=ExtResource("9_2pybm")]
position = Vector2(473.99997, 372.00003)
scale = Vector2(0.39733332, 0.34799993)

[node name="ProgressLayer" type="CanvasLayer" parent="."]

[node name="moneyIcon" type="Sprite2D" parent="ProgressLayer"]
position = Vector2(54, 41)
scale = Vector2(0.065, 0.065)
texture = ExtResource("2_ytnmq")

[node name="moneyCounterUI" type="Label" parent="ProgressLayer"]
offset_left = 102.0
offset_top = 26.0
offset_right = 315.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 22
text = ": $0"
script = ExtResource("1_eoja1")

[node name="sanityBarUI" type="TextureProgressBar" parent="ProgressLayer"]
offset_left = 68.0
offset_top = 262.00003
offset_right = 337.0
offset_bottom = 1262.0
scale = Vector2(0.31, 0.31)
value = 100.0
fill_mode = 3
texture_under = ExtResource("8_cphpt")
texture_over = ExtResource("9_rmouj")
texture_progress = ExtResource("10_mff8n")
script = ExtResource("3_eoja1")

[node name="Timer" type="Timer" parent="ProgressLayer/sanityBarUI"]

[node name="label_target" type="Label" parent="ProgressLayer"]
offset_left = 807.0
offset_top = 230.0
offset_right = 1045.0
offset_bottom = 265.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "This week's target :("

[node name="target_bar" type="TextureProgressBar" parent="ProgressLayer"]
offset_left = 811.0
offset_top = 259.0
offset_right = 2513.0
offset_bottom = 382.0
scale = Vector2(0.08, 0.08)
texture_under = ExtResource("1_jqjy7")
texture_progress = ExtResource("2_i6sgx")
script = ExtResource("7_7nxki")

[node name="Clock" type="AnimatedSprite2D" parent="ProgressLayer"]
position = Vector2(106, 157)
scale = Vector2(0.15805858, 0.15805858)
sprite_frames = SubResource("SpriteFrames_g1u5m")
script = ExtResource("27_s0bdn")

[node name="Pajangan" type="CanvasLayer" parent="."]

[node name="#000" type="Sprite2D" parent="Pajangan"]
visible = false
modulate = Color(0.8482855, 0, 0.2169796, 1)
position = Vector2(700, 76)
scale = Vector2(0.7, 0.7)
texture = ExtResource("12_8xdsi")

[node name="#001" type="Sprite2D" parent="Pajangan"]
visible = false
modulate = Color(0.52450556, 0.5245057, 0, 1)
position = Vector2(825, 76)
scale = Vector2(0.7, 0.7)
texture = ExtResource("12_8xdsi")

[node name="#002" type="Sprite2D" parent="Pajangan"]
visible = false
modulate = Color(1.8289685e-06, 0.4992513, 0.19147518, 1)
position = Vector2(950, 76)
scale = Vector2(0.7, 0.7)
texture = ExtResource("12_8xdsi")

[node name="Telephone" parent="." instance=ExtResource("5_io2gt")]
visibility_layer = 2
position = Vector2(1065, 160)

[node name="reduce_when_ring" type="Timer" parent="Telephone"]

[node name="call_timer" type="TextureProgressBar" parent="Telephone"]
visible = false
offset_left = -903.0
offset_top = 506.0
offset_right = -18.0
offset_bottom = 534.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("1_jqjy7")
texture_progress = ExtResource("2_i6sgx")
script = ExtResource("5_eoja1")

[node name="sanity_reduction" type="Timer" parent="Telephone/call_timer"]

[node name="spawn_pos" type="Node2D" parent="Telephone"]
position = Vector2(-25, 385)

[node name="work_timer" type="Timer" parent="."]
wait_time = 128.0
one_shot = true
autostart = true
script = ExtResource("31_omevc")

[node name="PauseLayer" type="CanvasLayer" parent="."]

[node name="PauseMenuInGame" parent="PauseLayer" instance=ExtResource("15_y3pug")]
offset_right = -1132.0
offset_bottom = -622.0

[connection signal="decrease_sanity" from="PcStuff/Screen" to="ProgressLayer/sanityBarUI" method="decreaseSanity"]
[connection signal="gain_money" from="PcStuff/Screen" to="ProgressLayer/moneyCounterUI" method="addMoney"]
[connection signal="money_notification" from="PcStuff/Screen" to="." method="play_added_money"]
[connection signal="new_decreaser" from="PcStuff/Screen" to="ProgressLayer/sanityBarUI" method="new_affecting"]
[connection signal="is_not_draining" from="ProgressLayer/sanityBarUI" to="." method="confirm_tasks_ended"]
[connection signal="timeout" from="ProgressLayer/sanityBarUI/Timer" to="ProgressLayer/sanityBarUI" method="_on_timer_timeout"]
[connection signal="call_notif" from="Telephone" to="." method="play_added_money"]
[connection signal="call_started" from="Telephone" to="Telephone/call_timer" method="_on_telephone_call_started"]
[connection signal="call_stopped" from="Telephone" to="ProgressLayer/moneyCounterUI" method="addMoney"]
[connection signal="decrease_sanity" from="Telephone" to="ProgressLayer/sanityBarUI" method="decreaseSanity"]
[connection signal="phone_ringing" from="Telephone" to="ProgressLayer/sanityBarUI" method="new_affecting"]
[connection signal="timeout" from="Telephone/reduce_when_ring" to="Telephone" method="_on_reduce_when_ring_timeout"]
[connection signal="on_call" from="Telephone/call_timer" to="ProgressLayer/sanityBarUI" method="new_affecting"]
[connection signal="reduce_sanity" from="Telephone/call_timer" to="ProgressLayer/sanityBarUI" method="decreaseSanity"]
[connection signal="timeout" from="Telephone/call_timer/sanity_reduction" to="Telephone/call_timer" method="_on_sanity_reduction_timeout"]
[connection signal="division_passed" from="work_timer" to="ProgressLayer/Clock" method="advance_time"]
[connection signal="timeout" from="work_timer" to="." method="_on_work_timer_timeout"]
[connection signal="timeout" from="work_timer" to="PcStuff/Screen" method="call_disable"]
[connection signal="timeout" from="work_timer" to="Telephone" method="disable"]
